# meridian

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  tenant-sync.yml
alembic/: env.py
alembic/versions/: 090478b0046f_create_raw_events_and_tenant_write_keys_.py  0d976deaf4de_add_sync_status_to_tenant_credentials.py  2dbc46985057_add_sync_status_to_tenant_credentials.py  8d4a2956848d_create_tenants_table.py  b5b775b46304_add_last_four_to_tenant_write_keys.py  d8cd107be2fc_composite_unique_staging_hubspot.py  dd416f2144bf_create_tenant_credentials_table.py  de4ad7a3110e_create_accounts_identity_map_staging_.py  e7f8901234ab_composite_unique_staging_hubspot.py
bruno/hubspot/: Authorize.bru  Callback.bru  Connect.bru  Disconnect.bru  Status.bru  Sync Status.bru  Webhook.bru
bruno/session/: Create Session.bru
bruno/telemetry/: Ingest Event.bru
bruno/write-keys/: Create Write Key.bru  List Write Keys.bru  Revoke Write Key.bru
data/generator/: Dockerfile  correlations.py  crm.py  generate.py  seeding.py  update.py
dbt/: dbt_project.yml  profiles.yml
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/app/: layout.tsx
frontend/e2e/: hubspot-connect.spec.ts  hubspot-integrations.spec.ts  write-keys.spec.ts
frontend/lib/: api.ts
scripts/: hubspot_sync.py  install-hooks.sh  seed_dev_raw_event.py  seed_dev_tenant.py
scripts/hooks/: commit-msg
src/meridian/: crypto.py  logging_config.py  main.py
tests/integration/: conftest.py  test_generator_data_integrity.py  test_hubspot_audit.py  test_hubspot_credentials.py  test_hubspot_oauth_endpoint.py  test_hubspot_sync_worker.py  test_hubspot_webhook.py  test_session_endpoint.py  test_telemetry_endpoint.py  test_write_keys_endpoint.py
tests/unit/: test_crypto.py
(+73 files in other folders)
