[project]
name = "meridian"
version = "0.1.0"
description = "Multi-tenant commercial analytics platform for B2B SaaS"
authors = [
    {name = "Marti Soura Vamseekar"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "fastapi (>=0.139.2,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "cryptography (>=49.0.0,<50.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "dbt-postgres (>=1.8.0,<2.0.0)"
]

[tool.poetry]
packages = [
    { include = "meridian", from = "src" }
]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "fakeredis (>=2.36.2,<3.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "testcontainers (>=4.14.2,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "greenlet (>=3.5.3,<4.0.0)"
]
